--- a/AIText/Views/ImageResource/Import.cshtml
+++ b/AIText/Views/ImageResource/Import.cshtml
@@ -3,7 +3,7 @@
 </script>
 <div class="row row-cards mt-3 card">
     <div class="card-header">
-        <h4><i class="card-title"></i> 导入商务交易词</h4>
+        <h4><i class="card-title"></i> 导入图片资源</h4>
     </div>
 
     <div class="row">
