--- a/AIText/Views/SendRecord/Index.cshtml
+++ b/AIText/Views/SendRecord/Index.cshtml
@@ -77,7 +77,7 @@
                     <div class="col-2">
                         <div class="subheader mb-2 mt-2 invisible">时间</div>
                         <div>
-                            <input asp-for="BeginTime" class="form-control" placeholder="" autocomplete="off">
+                            <input asp-for="EndTime" class="form-control" placeholder="" autocomplete="off">
                         </div>
                     </div>
                     <div class="col-2">
