--- a/AIText/Views/Shared/_Layout.cshtml
+++ b/AIText/Views/Shared/_Layout.cshtml
@@ -85,7 +85,7 @@
                                 </a>
                             </li> *@
 
-                            <li class="nav-item @(Url.ActionContext.HttpContext.Request.Path.Value == "/SiteKeyword" ? "active" : "") ">
+                            <li class="nav-item @(Url.ActionContext.HttpContext.Request.Path.Value.StartsWith("/SiteKeyword") ? "active" : "") ">
                                 <a class="nav-link" href="@Url.Content("~/SiteKeyword")">
                                     <span class="nav-link-icon d-md-none d-lg-inline-block">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="brown" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-abc"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M3 16v-6a2 2 0 1 1 4 0v6" /><path d="M3 13h4" /><path d="M10 8v6a2 2 0 1 0 4 0v-1a2 2 0 1 0 -4 0v1" /><path d="M20.732 12a2 2 0 0 0 -3.732 1v1a2 2 0 0 0 3.726 1.01" /></svg>
@@ -95,7 +95,7 @@
                                     </span>
                                 </a>
                             </li>
-                            <li class="nav-item @(Url.ActionContext.HttpContext.Request.Path.Value == "/ImageResource" ? "active" : "") ">
+                            <li class="nav-item @(Url.ActionContext.HttpContext.Request.Path.Value.StartsWith("/ImageResource") ? "active" : "") ">
                                 <a class="nav-link" href="@Url.Content("~/ImageResource")">
                                     <span class="nav-link-icon d-md-none d-lg-inline-block">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="green" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-photo"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M15 8h.01" /><path d="M3 6a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v12a3 3 0 0 1 -3 3h-12a3 3 0 0 1 -3 -3v-12z" /><path d="M3 16l5 -5c.928 -.893 2.072 -.893 3 0l5 5" /><path d="M14 14l1 -1c.928 -.893 2.072 -.893 3 0l3 3" /></svg>
@@ -125,7 +125,7 @@
                                     </span>
                                 </a>
                             </li>
-                            <li class="nav-item @(Url.ActionContext.HttpContext.Request.Path.Value == "/SendRecord" ? "active" : "") ">
+                            <li class="nav-item @(Url.ActionContext.HttpContext.Request.Path.Value.StartsWith("/SendRecord") ? "active" : "") ">
                                 <a class="nav-link" href="@Url.Content("~/SendRecord")">
                                     <span class="nav-link-icon d-md-none d-lg-inline-block">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="darkcyan" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-send"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M10 14l11 -11" /><path d="M21 3l-6.5 18a.55 .55 0 0 1 -1 0l-3.5 -7l-7 -3.5a.55 .55 0 0 1 0 -1l18 -6.5" /></svg>
