--- a/AIText/Views/SiteAccount/DoList.cshtml
+++ b/AIText/Views/SiteAccount/DoList.cshtml
@@ -12,6 +12,7 @@
                     <th>用户名</th>
                     <th>是否启用</th>
                     <th>每日发送</th>
+                    <th>时段</th>
                     <th>开始发送时间</th>
                     <th class="w-1"></th>
                 </tr>
@@ -31,6 +32,9 @@
                         </td>
                         <td class="text-muted">
                             @info.CountPerDay
+                        </td>
+                        <td class="text-muted">
+                            @info.Hours
                         </td>
                         <td class="text-muted">
                             @info.StartDate
