--- a/AIText/Views/SiteAccount/Edit.cshtml
+++ b/AIText/Views/SiteAccount/Edit.cshtml
@@ -67,7 +67,7 @@
                         <span class="form-check-label">是否启用</span>
                     </label>
                 </div>
-                <div class="col-6 mb-3 enable-send invisible">
+                <div class="col-6 mb-3 enable-send d-none">
                     <label class="form-label">每天创建的文章数</label>
                     <input asp-for="Hours" type="hidden"class="bg-focus form-control parsley-validated" />
                     <input asp-for="CountPerDay" type="number" min="1" max="24" class="bg-focus form-control parsley-validated" />
@@ -92,12 +92,12 @@
         $("#IsEnable").change(function() {
             if ($(this).is(":checked")) {
                 $(".enable-send").show();
-                $(".enable-send").removeClass("invisible");
+                $(".enable-send").removeClass("d-none");
                 $(".enable-send").removeClass("d-none");
             } else {
                 $(".enable-send").each(function(idx, item){
                     if ($(item).hasClass("col-6")) {
-                        $(item).addClass("invisible");
+                        $(item).addClass("d-none");
                     } else {
                         $(item).addClass("d-none");
                     }
