--- a/AIText/Views/Shared/_Layout.cshtml
+++ b/AIText/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                                     </span>
                                 </a>
                             </li>
-                            <li class="nav-item @(Url.ActionContext.HttpContext.Request.Path.Value == "/SiteAccount" ? "active" : "") ">
+                            <li class="nav-item @(Url.ActionContext.HttpContext.Request.Path.Value.StartsWith("/SiteAccount") ? "active" : "") ">
                                 <a class="nav-link" href="@Url.Content("~/SiteAccount")">
                                     <span class="nav-link-icon d-md-none d-lg-inline-block">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#0DAFFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-world"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" /><path d="M3.6 9h16.8" /><path d="M3.6 15h16.8" /><path d="M11.5 3a17 17 0 0 0 0 18" /><path d="M12.5 3a17 17 0 0 1 0 18" /></svg>
@@ -135,7 +135,16 @@
                                     </span>
                                 </a>
                             </li>
-                            
+                            <li class="nav-item @(Url.ActionContext.HttpContext.Request.Path.Value.StartsWith("/SendReview") ? "active" : "") ">
+                                <a class="nav-link" href="@Url.Content("~/SendReview")">
+                                    <span class="nav-link-icon d-md-none d-lg-inline-block">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="darkblue" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-message-plus"><path stroke="none" d="M0 0h24v24H0z" fill="none" /><path d="M8 9h8" /><path d="M8 13h6" /><path d="M12.01 18.594l-4.01 2.406v-3h-2a3 3 0 0 1 -3 -3v-8a3 3 0 0 1 3 -3h12a3 3 0 0 1 3 3v5.5" /><path d="M16 19h6" /><path d="M19 16v6" /></svg>
+                                    </span>
+                                    <span class="nav-link-title">
+                                        评论记录
+                                    </span>
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
